Реализована поддержка 3-х дисплеев через их классы.

--- a/MDK-ARM/3ddemo.uvprojx
+++ b/MDK-ARM/3ddemo.uvprojx
@@ -517,16 +517,6 @@
               <FilePath>../Src/stm32f4xx_hal_msp.c</FilePath>
             </File>
             <File>
-              <FileName>il9325.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\il9325.c</FilePath>
-            </File>
-            <File>
-              <FileName>il9325.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\Src\il9325.h</FilePath>
-            </File>
-            <File>
               <FileName>csgl.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\Src\csgl.cpp</FilePath>
@@ -535,6 +525,56 @@
               <FileName>csgl.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\Src\csgl.h</FilePath>
+            </File>
+            <File>
+              <FileName>idisplay.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Src\idisplay.h</FilePath>
+            </File>
+            <File>
+              <FileName>cdisplayhx8347d.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Src\cdisplayhx8347d.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>cdisplayhx8347d.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Src\cdisplayhx8347d.h</FilePath>
+            </File>
+            <File>
+              <FileName>cdisplayil9325.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Src\cdisplayil9325.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>cdisplayil9325.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Src\cdisplayil9325.h</FilePath>
+            </File>
+            <File>
+              <FileName>cdisplayspfd5408.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Src\cdisplayspfd5408.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>cdisplayspfd5408.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Src\cdisplayspfd5408.h</FilePath>
+            </File>
+            <File>
+              <FileName>idisplay.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Src\idisplay.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>cdisplaybased.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Src\cdisplaybased.h</FilePath>
+            </File>
+            <File>
+              <FileName>cdisplaybased.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\Src\cdisplaybased.cpp</FilePath>
             </File>
           </Files>
         </Group>
